--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "ziyan",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.1.5",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-htmlmin": "^5.0.1"
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.1"
   }
 }
