--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^9.1.5",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1"
