--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1",
+    "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.1"
   }
 }
