--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rev": "^8.1.1",
+    "gulp-rev-collector": "^1.3.1",
+    "gulp-rev-delete-original": "^0.2.3",
     "gulp-sass": "^4.0.1",
     "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.1"
